force-app/main/default/objects/vlocity_ins__ProductConfigurationChangeLog__c/fields/vlocity_ins__OldValue__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__OldValue__c</fullName>
    <description>Represents original value of the field, prior to the update.</description>
    <label>OldValue</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>