force-app/main/default/objects/vlocity_ins__ProductConfigurationChangeLog__c/fields/vlocity_ins__Product2Id__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Product2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Represents the ID of the Product whose configuration has been changed.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Configuration Change Logs</relationshipLabel>
    <relationshipName>ProductConfigurationChangeLogs</relationshipName>
    <type>Lookup</type>
</CustomField>